<resources>
    <string name="app_name">Homework_2</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="btn_ac">AC</string>
    <string name="btn_leftbracket">(</string>
    <string name="btn_rightbracket">)</string>
    <string name="btn_divide">/</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_multiply">*</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_plus">+</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_minus">-</string>
    <string name="btn_dot">.</string>
    <string name="btn_0">0</string>
    <string name="btn_backspase">◄</string>
    <string name="btn_result">=</string>
    <string name="test_text">0123456789/*-+=</string>
    <string name="test_result">for result</string>

</resources>